# ANKIALE

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
ANKIALE/: __ANKParams.py  __climatology.py  __curses_doc.py  __doc.py  __exceptions.py  __exec.py  __init__.py  __linalg.py  __logs.py  __natural.py  __release.py  __sys.py
ANKIALE/cmd/: __cmd_attribute.py  __cmd_constrain.py  __cmd_draw.py  __cmd_example.py  __cmd_fit.py  __cmd_misc.py  __cmd_show.py  __cmd_synthesize.py  __init__.py
ANKIALE/data/: EXAMPLE_EU.txt  EXAMPLE_GEVMIN_FRA12.txt  EXAMPLE_GEV_IDF.txt  EXAMPLE_GEV_PARIS-SSP126.txt  EXAMPLE_GEV_PARIS-SSP245.txt  EXAMPLE_GEV_PARIS-SSP370.txt  EXAMPLE_GEV_PARIS-SSP585.txt  EXAMPLE_GEV_PARIS.txt  EXAMPLE_GMST.txt  EXAMPLE_NORMAL_FRA03.txt  STAN_GEVMODEL_PRIOR-MULTINORMAL.stan  STAN_GEVMODEL_PRIOR-NORMAL.stan  STAN_NORMALMODEL_PRIOR-MULTINORMAL.stan  STAN_NORMALMODEL_PRIOR-NORMAL.stan  XN_CMIP6.csv
ANKIALE/plot/: __XN.py  __colors.py  __covariates.py  __init__.py  __utils.py
ANKIALE/stats/: __KCC.py  __MultiGAM.py  __NSLawMLEFit.py  __constraint.py  __init__.py  __synthesis.py  __tools.py
BSAC/: __BSACParams.py  __XZarr.py  __climatology.py  __curses_doc.py  __doc.py  __ebm.py  __exec.py  __init__.py  __linalg.py  __logs.py  __natural.py  __release.py  __sys.py
BSAC/cmd/: __cmd_attribute.py  __cmd_attribution.py  __cmd_constrain.py  __cmd_draw.py  __cmd_example.py  __cmd_fit.py  __cmd_misc.py  __cmd_show.py  __cmd_synthesize.py
BSAC/data/: EBM_CMIP6.csv  EXAMPLE_EU.txt  EXAMPLE_FRA12.txt  EXAMPLE_GMST.txt  (+20 more)
scripts/: ank  bsac
(+39 files in other folders)
