[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ANKIALE"
dynamic = ["version"]
dependencies = [
  "numpy",
  "scipy",
  "xarray",
  "dask",
  "netCDF4",
  "cftime",
  "matplotlib",
  "SDFC (>=0.9.0)",
  "statsmodels (>= 0.14)",
  "xesmf",
  "zxarray (>=0.10.0)",
  "cmdstanpy",
]
requires-python = ">=3.10"
authors = [
  {name = "Yoann Robin", email = "yoann.robin.k@gmail.com"},
]
maintainers = [
  {name = "Yoann Robin", email = "yoann.robin.k@gmail.com"},
]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Intended Audience :: Science/Research",
]

